fixed border images on firefox

--- a/media/css/blog.css
+++ b/media/css/blog.css
@@ -8,6 +8,7 @@
 /* line 3, ../scss/blog.scss */
 .blog {
   padding: 0;
+  border-style: solid;
   -moz-border-image: url(../images/noiseDivider.png) 0 0 2 0 repeat repeat;
   -webkit-border-image: url(../images/noiseDivider.png) 0 0 2 0 repeat repeat;
   -webkit-border-image: url(../images/noiseDivider.png) 0 0 2 0 repeat repeat;
@@ -40,6 +41,7 @@
 /* line 29, ../scss/blog.scss */
 .blog .blogPost {
   padding: 1.5em 0;
+  border-style: solid;
   -moz-border-image: url(../images/noiseDivider.png) 2 0 0 0 repeat repeat;
   -webkit-border-image: url(../images/noiseDivider.png) 2 0 0 0 repeat repeat;
   -webkit-border-image: url(../images/noiseDivider.png) 2 0 0 0 repeat repeat;
@@ -72,6 +74,7 @@
   color: #aaaaaa;
   display: block;
   background: url(../images/noiseGrey.png) repeat left center;
+  border-style: solid;
   -moz-border-image: url(../images/noiseGreyDark.png) 2 0 0 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 2 0 0 0 repeat repeat;
   -webkit-border-image: url(../images/noiseGreyDark.png) 2 0 0 0 repeat repeat;
